--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
         pip install pytest-cov
     - name: Test with pytest and generate coverage report
       run: |
-        JAX_ENABLE_X64=1 pytest --cov=jax_md --cov-report=xml --cov-report=term --cov-config=setup.cfg
+        JAX_ENABLE_X64=1 pytest --cov=jaxreaxff --cov-report=xml --cov-report=term --cov-config=setup.cfg
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
